# OBC

./: README.md
.github/: pull_request_template.md
.github/workflows/: quality.yml
api/: main.py
backend/: .env  .env.example  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  schema.prisma  vercel.json
backend/app/: main.py
backend/app/models/: api.py  auth.py  companies.py  cron.py  favorites.py  listings.py  profile.py
backend/app/routers/: auth.py  companies.py  cron.py  favorites.py  greeting.py  images.py  listings.py  profile.py  users.py
backend/app/util/: auth.py  companies.py  cron.py  db.py  favorites.py  images.py  listings.py  origin.py  profile.py
backend/env/: pyvenv.cfg
backend/env/Scripts/: activate  activate.bat
backend/util/: origin.py
database/: docker-compose.yaml  init.sql
frontend/: .prettierrc.json  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: App.vue  main.ts  state.ts
frontend/src/api/: auth.ts  axios.ts  companies.ts  favorites.ts  fetchData.ts  profile.ts  util.ts
frontend/src/components/: TheWelcome.vue
frontend/src/router/: index.ts
frontend/src/types/: axios.d.ts
frontend/src/views/: ContactPopup.vue  EditProfileView.vue  HomeView.vue  JoinView.vue  LandingView.vue  LoginView.vue  NetworkingView.vue  ProfileView.vue  SavedListingsView.vue  TeamView.vue
